# open-skill-graph

./: .env  .env.example  .gitignore  Dockerfile  README.md  System_Prompt.md  main.py  pyproject.toml  sandbox.env  sandbox_service.py  技能组合优化框架研究.md
Researchs/HITL/java - python/: README_hitl_python.md  agentscope_hitl_example.py  agentscope_human_loop_research.md  hitl_python_example.py  hitl_simple_example.py
Researchs/HITL/official - python/: README.md  agentscope_hitl_tutorial.py  hitl_official_example.py  run_demo.bat  run_demo.sh
Researchs/skill-compose/: skills-planner的作用.md  trigger提取机制详解.md  动态提示词技术实现分析.md  技能组合实例演示.md  技能组合真相澄清.md  研究结论.md
Researchs/skillNet/: SKILL_中文版.md  办公文档技能创建技术详解.md  技能关系图谱技术详解.md  技能组合优化框架技术白皮书.md
django_registry/: README.md  manage.py  requirements.txt
django_registry/apps/skills/: admin.py  models.py  serializers.py  urls.py  views.py
django_registry/registry_service/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: start-all.ps1  start-metadata-registry.ps1  stop-all.ps1
scripts/linux/: start-all.sh  start-metadata-registry.sh  start-registry.sh  stop-all.sh
scripts/win/: start-all.ps1  start-metadata-registry.ps1  start-registry.ps1  stop-all.ps1
src/: __init__.py  skillscope_main.py
src/app/: __init__.py  app.py  hooks.py  process_logic.py
src/app/endpoints/: __init__.py  base.py  sandbox_file.py  skill.py  (+2 more)
src/config/: __init__.py  settings.py
src/core/: __init__.py  prompt.py
src/errors/: bases.py  errors.py  oaas.py
src/logger/: __init__.py  enhanced.py  setup.py
src/utils/: file_ops.py  mock.py
(+23 files in other folders)
