[project]
name = "open-skill-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentscope>=1.0.18",
    "agentscope-runtime>=1.1.3",
    "django>=5.1,<6",
    "djangorestframework>=3.15,<4",
    "psycopg2-binary>=2.9,<3",
]
